--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ JWT_SECRET= HGFHGEAD1212432432
 BRAINTREE_MERCHANT_ID= 99bqwb35sgxw8xxk
 BRAINTREE_PUBLIC_KEY= xk2s75h8c622pym8
 BRAINTREE_PRIVATE_KEY= fde966000718eb9cc7f9c271690e2554
+GEMINI_API_KEY=AIzaSyCqPSd08pg3uXtaJ0K3EESZgGirNmyMuCg
